2001-01-28  Jeff Freedman  <jeff@amy.nerble.net>

	* Rat-race game works.
	* Armageddon spell implemented.

2001-01-26  Tristan Tarrant <nadir@users.sourceforge.net>
	* mapedit/dirbrowser.*: added a nice directory browser widget stolen from XMMS
	* mapedit/objbrowse.*: added framework for generic browsers
	* mapedit/paledit.*: made it conform to Object_browser
	* mapedit/shapelst.*: ditto
	* mapedit/studio.cc: Use a tree instead of a list for the files, categorize the 
	  files by type, use the directory browser to select the static path

2001-01-26  Tristan Tarrant <nadir@users.sourceforge.net>
	* mapedit/shapelst.*: show shapes on multiple rows.
	* mapedit/studio.*: fixes.

2001-01-25  Tristan Tarrant <nadir@users.sourceforge.net>
	* mapedit/*: more work.

2001-01-25  Jeff Freedman  <jeff@amy.nerble.net>
	* SI:  Fixed some usecode assignments (so Knight's test isn't so
	broken).  Fixed dungeon rendering there too.
	* wud.c - Give "-a" as func. # to print whole thing.

2001-01-25  Tristan Tarrant <nadir@users.sourceforge.net>
	* configure.in: check for libglade
	* mapedit/*: general hacking resulting in a libglade'ified ExultStudio.
	  Caveat: it is very picky about where it looks for stuff. 
	
2001-01-24  Jeff Freedman  <jeff@amy.nerble.net>
	* SI:  You can now start the Knight's Test (but you'll get stuck
	after entering).

2001-01-25  Ryan Nunn <triforce@merlin.net.au>
	* mingw_kuldges.h: Added so Exult can once again be compiled in Win32
	* makefile.win32, makefile.cygwin: -include mingw_kludges.h

2001-01-23  Jeff Freedman  <jeff@amy.nerble.net>
	* Sprite effects no longer get split up (at SI start).

2001-01-23  Tristan Tarrant <nadir@users.sourceforge.net>
	* mapedit/exultstudio.cc: framework for running both standalone and
	  as GIMP plugin (only former works at the moment).
	* mapedit/Makefile.am: add GIMP libs if needed

2001-01-23  Tristan Tarrant <nadir@users.sourceforge.net>
	* tools/Makefile.am, tools/u7shp.c: removed GIMP plugin from here