@@ -1,0 +1,24 @@
+exult.flx
+exult_quotes.shp
+exult_credits.shp
+quotes.txt
+credits.txt
+exult_logo.shp
+exult0.pal
+black_gate.shp
+serpent_isle.shp
+meditown.mid
+font.shp
+setup.shp
+play_intro.shp
+full_screen.shp
+cheating.shp
+ok.shp
+cancel.shp
+pointers.shp
+exit.shp
+play_1st_scene.shp
+extras.shp
+midi_conversion.shp
+sfx_conversion.shp
+palette_fades.shp
