@@ -1,5 +1,9 @@
-2001-01-28  Jeff Freedman  <jeff@amy.nerble.net>
+2001-01-30  Tristan Tarrant <nadir@users.sourceforge.net>
+	* tools/expack.cc: Added an -i option which reads in a file describing
+	  the flx to build. Got rid of the really gross MacOS hack.
+	* data/flx.in: Description for creating exult.flx
 
+2001-01-28  Jeff Freedman  <jeff@amy.nerble.net>
 	* Rat-race game works.
 	* Armageddon spell implemented.
 
